--- a/app/pages/404.html
+++ b/app/pages/404.html
@@ -3,7 +3,7 @@
         <h1 class="text-9xl font-bold text-gray-300">404</h1>
         <p class="text-2xl font-semibold text-gray-600 mt-4">Page Not Found</p>
         <p class="text-gray-500 mt-2">The page you are looking for doesn't exist.</p>
-        <a href="#/home"
+        <a href="#/"
             class="mt-8 inline-block px-8 py-3 bg-blue-600 text-white rounded-lg shadow hover:bg-blue-700 transition">
             Go Home
         </a>
