--- a/app/pages/home.html
+++ b/app/pages/home.html
@@ -94,6 +94,45 @@
                 </div>
             </div>
 
+            <!-- Scroll Animation Demo -->
+            <div class="mt-12 p-6 bg-gradient-to-r from-purple-50 to-pink-50 rounded-xl border border-purple-100">
+                <h2 class="text-2xl font-bold mb-6" data-animate="fade-up">Scroll Animation Demo</h2>
+                <p class="mb-6 text-gray-600" data-animate="fade-up">Scroll down to see smooth reveal animations on elements.</p>
+                
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+                    <div class="bg-white p-6 rounded-lg shadow-md" data-animate="fade-left">
+                        <div class="text-3xl mb-3">⚡</div>
+                        <h3 class="text-lg font-semibold mb-2">Fast Loading</h3>
+                        <p class="text-sm text-gray-600">Morph-based updates preserve state and reduce repaints.</p>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-md" data-animate="zoom">
+                        <div class="text-3xl mb-3">🎨</div>
+                        <h3 class="text-lg font-semibold mb-2">Smooth Animations</h3>
+                        <p class="text-sm text-gray-600">IntersectionObserver-based reveal for lightweight performance.</p>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-md" data-animate="fade-right">
+                        <div class="text-3xl mb-3">🔄</div>
+                        <h3 class="text-lg font-semibold mb-2">Smart Routing</h3>
+                        <p class="text-sm text-gray-600">Hybrid routing with automatic morph for seamless navigation.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Morph Demo Section -->
+            <div class="mt-12 p-6 bg-green-50 rounded-xl border border-green-100">
+                <h2 class="text-2xl font-bold mb-4" data-animate="fade-up">Morphdom Routing Demo</h2>
+                <p class="mb-6 text-gray-600" data-animate="fade-up">
+                    Navigate to <a href="#/about" class="text-green-600 hover:text-green-800 font-semibold">About</a> and back.
+                    Thanks to morphdom, the transition is smooth and Alpine component state is preserved!
+                </p>
+                <div class="bg-white p-4 rounded-lg border border-green-200" data-animate="zoom">
+                    <p class="text-sm text-gray-700">
+                        <strong>How it works:</strong> CoreUI.morph() intelligently reconciles the new page HTML into the DOM using morphdom.
+                        This means Alpine.js components remain in memory, reducing flickering and giving a native app feel.
+                    </p>
+                </div>
+            </div>
+
             <!-- Features Demo -->
             <div class="mt-12 p-6 bg-blue-50 rounded-xl border border-blue-100">
                 <h2 class="text-2xl font-bold mb-4">Features Demo</h2>
@@ -104,6 +143,7 @@
                         <code>x-for</code> (Modern).</li>
                     <li><strong>Store:</strong> Current Theme: <span x-text="$store.global.theme"
                             class="font-bold uppercase"></span></li>
+                    <li><strong>Morph + Scroll:</strong> Page uses morphdom for smooth updates and IntersectionObserver for scroll animations.</li>
                 </ul>
                 <button @click="Framework.usePlugin('toast', 'Hello from Button!', 'info')"
                     class="mt-6 px-6 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 transition">
