--- a/index.html
+++ b/index.html
@@ -23,11 +23,16 @@
     <!-- Alpine.js Core -->
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.13.3/dist/cdn.min.js"></script>
 
+    <!-- morphdom (for smooth DOM morph updates - enables CoreUI.morph) -->
+    <script src="https://unpkg.com/morphdom@2.6.1/dist/morphdom-umd.min.js"></script>
+
     <!-- Core framework styles (dot pattern, skeleton) -->
     <link rel="stylesheet" href="core/styles/core.css">
 
     <!-- Custom Styles CSS (project overrides) -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- Scroll animate styles (lightweight AOS) -->
+    <link rel="stylesheet" href="assets/css/scroll-animate.css">
 
     <!-- Inline Styles -->
     <style>
@@ -66,6 +71,8 @@
 
     <!-- Project-specific assets (for dev customization) -->
     <script src="assets/js/app.js"></script>
+    <!-- Scroll animate (lightweight AOS) -->
+    <script src="assets/js/scroll-animate.js"></script>
     <script src="main.js"></script>
 </body>
 
