feat: Introduce documentation pages and optimize core script loading by switching to minified versions.

--- a/index.html
+++ b/index.html
@@ -60,14 +60,15 @@
         <div id="router-view"></div>
     </div>
 
-    <!-- Framework Scripts -->
-    <script src="core/store.js"></script>
-    <script src="core/engine.js"></script>
-    <script src="core/router.js"></script>
+    <!-- Framework Scripts (Minified for performance) -->
+    <!-- To debug, switch to .js versions -->
+    <script src="core/store.min.js"></script>
+    <script src="core/engine.min.js"></script>
+    <script src="core/router.min.js"></script>
     <script src="routes.js"></script>
 
     <!-- Core UI utilities (skeleton/cache/helpers) -->
-    <script src="core/ui.js"></script>
+    <script src="core/ui.min.js"></script>
 
     <!-- Project-specific assets (for dev customization) -->
     <script src="assets/js/app.js"></script>
