feat: Introduce comprehensive error handling with dev/prod modes, dedicated error pages, and app configuration.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
     <!-- morphdom (for smooth DOM morph updates - enables CoreUI.morph) -->
     <script src="https://unpkg.com/morphdom@2.6.1/dist/morphdom-umd.min.js"></script>
 
+    <!-- App Configuration (must load before framework) -->
+    <script src="config.js"></script>
+
+    <!-- Error Handler (must load before framework) -->
+    <script src="core/error-handler.min.js"></script>
+
     <!-- Core framework styles (dot pattern, skeleton) -->
     <link rel="stylesheet" href="core/styles/core.css">
 
