feat: Add base path configuration for GitHub Pages support and move data-helper.js to examples.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <!-- App Configuration (must load before framework) -->
     <script src="config/app.js"></script>
 
+    <!-- Base Path Configuration (for GitHub Pages support) -->
+    <script src="config/base-path.js"></script>
+
     <!-- Error Handler (must load before framework) -->
     <script src="core/System/ErrorHandler.min.js"></script>
 
@@ -84,7 +87,7 @@
     <!-- Project-specific assets (for dev customization) -->
     <script src="public/js/app.js"></script>
     <!-- Data helper for easy JSON loading -->
-    <script src="public/js/data-helper.js"></script>
+    <script src="public/js/examples/data-helper.js"></script>
     <!-- Scroll animate trigger (Hybrid: CSS + lightweight JS) -->
     <script src="public/js/scroll-animate.js"></script>
 
