feat: Introduce a centralized plugin system with new toast, loader, modal, and notification plugins, and establish an `App` alias for `Framework`.

--- a/index.html
+++ b/index.html
@@ -86,10 +86,11 @@
 
     <!-- Project-specific assets (for dev customization) -->
     <script src="public/js/app.js"></script>
-    <!-- Data helper for easy JSON loading -->
-    <script src="public/js/examples/data-helper.js"></script>
     <!-- Scroll animate trigger (Hybrid: CSS + lightweight JS) -->
     <script src="public/js/scroll-animate.js"></script>
+
+    <!-- Centralized Plugin System -->
+    <script src="app/Plugins/index.js"></script>
 
     <!-- Main App Entry Point -->
     <script src="main.js"></script>
